fix: SurveyPage visual fix for scrollbar

--- a/frontend/src/styles/_reset.scss
+++ b/frontend/src/styles/_reset.scss
@@ -10,9 +10,4 @@ body {
   font-family: $font-main;
   color: $color-text;
   -webkit-font-smoothing: antialiased;
-  overflow-y: scroll; 
-}
-
-html {
-  overflow-y: scroll; 
 }
